--- a/main.html
+++ b/main.html
@@ -4,11 +4,29 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<button type="button" class="btn btn-primary">button-1</button>
+	<button type="button" class="btn btn-outline-secondary">button-2</button>
+   <button type="button" class="btn btn-lg btn-success">button-3</button>
+	<button type="button" class="btn btn-sm btn-danger">button-4</button>
+<button type="button" class="btn btn-warning btn-lg w-100">button-5</button>
+<button type="button" class="btn btn-info " disabled>button-6</button>
+<button type="button" class="btn btn-light">button-7</button>
+<button type="button" class="btn btn-link">button-8</button>
+	
+	
+	
+	
+	
+	
+	
+	<script type="text/javascript" src="./script.js">
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </script>
 
 </body>
